Image spacing fix for about page Tooltip docs spacing fix

--- a/css/ghpages-materialize.css
+++ b/css/ghpages-materialize.css
@@ -7392,7 +7392,7 @@ ul.side-nav.full {
  }
 
 /***************
-  HTML Styles	
+  HTML Styles
 ***************/
 body {
   background-color: #fcfcfc; }
@@ -7430,7 +7430,7 @@ nav {
   padding: 20px 20px; }
 
 /********************
-  Index Page Styles	
+  Index Page Styles
 ********************/
 #logo-container {
   position: absolute;
@@ -7512,6 +7512,11 @@ nav {
 
 .promo {
   width: 100%; }
+  @media only screen and (max-width : 992px) {
+    .promo {
+      width: 60%;
+      margin: 0 auto;
+      display: block; } }
   .promo i {
     color: #ee6e73;
     font-size: 7rem;
